Fix some javadoc errors.